test/asm/mode.err
Error: mode.asm: 15: instruction not supported on selected processor:
    fadd
        ^
Errors: 1
